--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
       </div>
       <div class="hero">
-        <h1>Hello There!</h1>
-        <h2>We are Leon - Super Creative & Minimal<br>Agency  Web Template.</h2>
+        <h1>롤안한다 시벌놈들아</h1>
+        <h2>나 이직할거임<br>뽁큐</h2>
       </div>
     </header>
 <!-- Info Squares -->
