--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
       </div>
       <div class="hero">
-        <h1>롤안한다 시벌놈들아</h1>
-        <h2>나 이직할거임<br>뽁큐</h2>
+        <h1>初めまして！</h1>
+        <h2>キムの製作所です。<br>よろしくお願いします。</h2>
       </div>
     </header>
 <!-- Info Squares -->
