--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <ul>
           <h3>Menu</h3>
-          <li><a href="#one">Home</a></li>
-          <li><a href="#two">Services</a></li>
-          <li><a href="#three">Portfolio</a></li>
+          <li><a href="#one">メイン</a></li>
+          <li><a href="#two">履歴</a></li>
+          <li><a href="#three">ポートフォリオ</a></li>
           <li><a href="#four">About</a></li>
         </ul>
         <ul class="lower-menu">
