--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="hero">
-        <h1>初めまして！</h1>
+        <h1>はじめまして！</h1>
         <h2>キムの製作所です。<br>よろしくお願いします。</h2>
       </div>
     </header>
@@ -62,22 +62,22 @@
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-magic" aria-hidden="true"></i>
-            <h4>Tell Us Your Idea</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
+            <h4>もっと面白く</h4>
+            <p>ゲームは面白いものだ <br>いつもプレーヤーの立場で考え、<br>面白さを追求する</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-diamond" aria-hidden="true"></i>
-            <h4>We Will Do All The Work</h4>
+            <h4>もっと華やかに</h4>
             <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-globe" aria-hidden="true"></i>
-            <h4>Your Product is Worldwide</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
+            <h4>もっと速く</h4>
+            <p>いくら面白くても遅いなら失敗だ<br>いつも最適化を考え、<br>安定性を追求する</p>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="row">
           <div class="title">
-            <h6>services</h6>
+            <h6>履歴</h6>
             <p>Don't be busy, be productive</p>
           </div>
         </div>
@@ -147,6 +147,15 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="hover01" href="#">
               <figure><img class="img-fluid" src="img/portfolio2.jpg" alt=""></figure>
+            </a>
+            <div class="portfolio-caption">
+              <h4>New Project</h4>
+              <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="hover01" href="#">
+              <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>New Project</h4>
