--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
         <div class="row">
           <div class="title">
             <h6>履歴</h6>
-            <p>Don't be busy, be productive</p>
+            <p>基本に充実せよ</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-text">
               <i class="fa fa-pencil" aria-hidden="true"></i>
-              <h4>Graphic Design</h4>
-              <p>Graphic design is the process of visual communication and problem-solving using one or more of typography,photography and illustration.</p>
+              <h4>6か月間のユニティゲーム専門家課程修了</h4>
+              <p>現在最も人気のあるゲーム制作ツールであるUnityの活用方法を専門家過程で習得</p>
             </div>
             <div class="service-text">
               <i class="fa fa-link" aria-hidden="true"></i>
-              <h4>Web Design</h4>
-              <p>Web design encompasses many different skills and disciplines in the production and maintenance of websites.</p>
+              <h4>プログラマーとしての多才</h4>
+              <p>どんなプログラマーであっても、全ての言語を用いて開発が可能でなければならない。</p>
             </div>
           </div>
           <div class="col-lg-4 col-sm-4 col-xs-12">
