--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-text">
               <i class="fa fa-pencil" aria-hidden="true"></i>
-              <h4>憧れの日本に就職するための努力</h4>
+              <h4>憧れの日本に就職する<br>ための努力</h4>
               <p>その国に生きるためには<br>まず文化と言語を学ばなければならない <br>単に日本語を勉強するのではなく、<br>日本そのものを大学課程を通じて感じる。</p>
             </div>
             <div class="service-text">
