--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
             <div class="service-text">
               <i class="fa fa-pencil" aria-hidden="true"></i>
               <h4>憧れの日本に就職する<br>ための努力</h4>
-              <p>その国に生きるためには<br>まず文化と言語を学ばなければならない <br>単に日本語を勉強するのではなく、<br>日本そのものを大学課程を通じて感じる。</p>
+              <p>その国に生きるためにはまず文化と言語を学ばなければならない単に日本語を勉強するのではなく、日本そのものを大学課程を通じて感じる。</p>
             </div>
             <div class="service-text">
               <i class="fa fa-link" aria-hidden="true"></i>
-              <h4>6か月間のユニティゲーム専門家課程修了</h4>
-              <p>現在最も人気のあるゲーム制作ツールである<br>Unityの活用方法を専門家過程で習得</p>
+              <h4>6か月間のユニティゲーム<br>専門家課程修了</h4>
+              <p>現在最も人気のあるゲーム制作ツールであるUnityの活用方法を専門家過程で習得</p>
             </div>
           </div>
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-text">
               <i class="fa fa-sliders" aria-hidden="true"></i>
               <h4>プログラマーとしての多才</h4>
-              <p>どんなプログラマーであっても、<br>全ての言語を用いて開発が可能でなければならない。</p>
+              <p>どんなプログラマーであっても、全ての言語を用いて開発が可能でなければならない。</p>
             </div>
             <div class="service-text">
               <i class="fa fa-laptop" aria-hidden="true"></i>
