--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
         <div class="row">
           <div class="title">
             <h6>履歴</h6>
-            <p>日本でプログラマーになるための私の道</p>
+            <p>基本に充実せよ</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-text">
               <i class="fa fa-pencil" aria-hidden="true"></i>
-              <h4>憧れの日本に就職する<br>ための努力</h4>
-              <p>その国に生きるためにはまず文化と言語を学ばなければならない単に日本語を勉強するのではなく、日本そのものを大学課程を通じて感じる。</p>
+              <h4>憧れの日本に就職するための努力</h4>
+              <p>その国に生きるためにはまず文化と言語を学ばなければならない 単に日本語を勉強するのではなく、日本そのものを大学課程を通じて感じる。</p>
             </div>
             <div class="service-text">
               <i class="fa fa-link" aria-hidden="true"></i>
-              <h4>6か月間のユニティゲーム<br>専門家課程修了</h4>
+              <h4>6か月間のユニティゲーム専門家課程修了</h4>
               <p>現在最も人気のあるゲーム制作ツールであるUnityの活用方法を専門家過程で習得</p>
             </div>
           </div>
@@ -108,12 +108,21 @@
             <div class="service-text">
               <i class="fa fa-sliders" aria-hidden="true"></i>
               <h4>プログラマーとしての多才</h4>
-              <p>どんなプログラマーであっても、全ての言語を用いて開発が可能でなければならない。<br> <br> </p>
+              <p>どんなプログラマーであっても、全ての言語を用いて開発が可能でなければならない。</p>
             </div>
             <div class="service-text">
               <i class="fa fa-laptop" aria-hidden="true"></i>
               <h4>再びゲームへの挑戦</h4>
               <p>その国に生きるためにはまず文化と言語を学ばなければならない。 単に日本語を勉強するのではなく、日本そのものを大学課程を通じて感じる。</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-4 col-xs-12">
+            <div class="service-img">
+              <img src="img/service.jpg" alt="">
+              <div class="shape">
+                <h4>tetewtwet</h4>
+                <p>Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -125,7 +134,7 @@
         <div class="row">
           <div class="title">
             <h6>portfolio</h6>
-            <p>基本に充実せよ</p>
+            <p>If you do it right, it will last forever</p>
           </div>
         </div>
         <div class="row">
