--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-text">
               <i class="fa fa-pencil" aria-hidden="true"></i>
-              <h4>憧れの日本に就職するための努力</h4>
+              <h4>憧れの日本に就職する<br>ための努力</h4>
               <p>その国に生きるためにはまず文化と言語を学ばなければならない 単に日本語を勉強するのではなく、日本そのものを大学課程を通じて感じる。</p>
             </div>
             <div class="service-text">
               <i class="fa fa-link" aria-hidden="true"></i>
-              <h4>6か月間のユニティゲーム専門家課程修了</h4>
+              <h4>6か月間のユニティゲーム<br>専門家課程修了</h4>
               <p>現在最も人気のあるゲーム制作ツールであるUnityの活用方法を専門家過程で習得</p>
             </div>
           </div>
