--- a/index.html
+++ b/index.html
@@ -119,10 +119,7 @@
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-img">
               <img src="img/service.jpg" alt="">
-              <div class="shape">
-                <h4>tetewtwet</h4>
-                <p>Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction.</p>
-              </div>
+              <div class="shape"></div>
             </div>
           </div>
         </div>
