--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
               <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
             </div>
           </div>
-         
         </div>
         <div class="hidden-gallery">
           <div class="row">
@@ -184,6 +183,8 @@
           </div>
         </div>
       </div>
+      </div>
+    </div>
     </section>
 <!-- About -->
     <section id="four" class="about">
