--- a/index.html
+++ b/index.html
@@ -221,21 +221,21 @@
         </div>
         <div class="row">
           <div class="contact-info">
-            <h1>Feel free to drop us a line at:</h1>
-            <h1>leonagency@mail.com</h1>
-            <p>Find us on social networks:</p>
+            <h1>私の話を聞いてくださって本当にありがとうございます。</h1>
+            <h1>wnsruadl90@naver.com</h1>
+            <!-- <p>Find us on social networks:</p>
             <ul>
               <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
     </section>
   <!-- Footer -->
     <section class="footer">
-      <h4>© 2019 - <span>Leon</span>,All Right Reserved</h4>
+      <h4>© 2020 - <span>JunGyeom</span>Create By Kim</h4>
     </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
