--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
         </div>
         <div class="row">
           <div class="contact-info">
-            <h1>私の話を聞いてくださって本当にありがとうございます。</h1>
-            <h1>wnsruadl90@naver.com</h1>
+            <h1>私の話を聞いてくださって<br>本当にありがとうございます。</h1>
+            <h2>wnsruadl90@naver.com</h2>
             <!-- <p>Find us on social networks:</p>
             <ul>
               <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
