--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
         </div>
         <div class="row">
           <div class="contact-info">
-            <h2>私の話を聞いてくださって<br>本当にありがとうございます。</h2>
+            <h2>私の話を聞いてくださって</h2>
+            <h2>本当にありがとうございます。</h2>
             <h3>wnsruadl90@naver.com</h3>
             <!-- <p>Find us on social networks:</p>
             <ul>
