--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <div class="container">
         <div class="row">
           <div class="title">
-            <h6>履歴</h6>
-            <p>基本に充実せよ</p>
+            <h6>履歴基本に充実せよ</h6>
+            <p>履歴</p>
           </div>
         </div>
         <div class="row">
@@ -221,9 +221,9 @@
         </div>
         <div class="row">
           <div class="contact-info">
-            <h2>私の話を聞いてくださって</h2>
-            <h2>本当にありがとうございます。</h2>
-            <h3>wnsruadl90@naver.com</h3>
+            <h1>私の話を聞いてくださって</h1>
+            <h1>本当にありがとうございます。</h1>
+            <h2>wnsruadl90@naver.com</h2>
             <!-- <p>Find us on social networks:</p>
             <ul>
               <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
