--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
         </div>
         <div class="row">
           <div class="contact-info">
-            <h1>私の話を聞いてくださって</h1>
-            <h1>本当にありがとうございます。</h1>
+            <h1>ご覧くださって本当にありがとうございます。</h1>
             <h2>wnsruadl90@naver.com</h2>
             <!-- <p>Find us on social networks:</p>
             <ul>
@@ -236,7 +235,7 @@
     </section>
   <!-- Footer -->
     <section class="footer">
-      <h4>© 2020 - <span>JunGyeom</span>Create By Kim</h4>
+      <h4>© 2020 - <span>日本プログラマー</span>Create By JunGyeomKim</h4>
     </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
