--- a/index.html
+++ b/index.html
@@ -31,13 +31,7 @@
           <h3>Get in Touch</h3>
           <li><a href="#five">Contact Me</a></li>
         </ul>
-        <ul class="lower-menu">
-          <h3>Get Social</h3>
-          <li><a href="#">Behance</a></li>
-          <li><a href="#">Dribble</a></li>
-          <li><a href="#">Twitter</a></li>
-        </ul>
-        <h5>© Leon 2019</h5>
+        <h5>© Kim 2020</h5>
       </nav>
       <div class="container">
         <div id="MagicMenu" class="nav-header">
@@ -62,15 +56,15 @@
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-magic" aria-hidden="true"></i>
-            <h4>もっと面白く</h4>
-            <p>ゲームは面白いものだ <br>いつもプレーヤーの立場で考え、<br>面白さを追求する</p>
+            <h4>もっと華やかに</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-diamond" aria-hidden="true"></i>
-            <h4>もっと華やかに</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
+            <h4>もっと面白く</h4>
+            <p>ゲームは面白いものだ <br>いつもプレーヤーの立場で考え、<br>面白さを追求する</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
@@ -140,8 +134,8 @@
               <figure><img class="img-fluid" src="img/portfolio1.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
-              <h4>스택</h4>
-              <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+              <h4>Stack</h4>
+              <p>モバイルゲームのStackの模索です(個人プロジェクト課題)</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -149,8 +143,8 @@
               <figure><img class="img-fluid" src="img/portfolio2.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
-              <h4>탑앤다운</h4>
-              <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+              <h4>Top＆Down</h4>
+              <p>Rayの概念を理解するための練習プロジェクトです</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -158,8 +152,8 @@
               <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
-              <h4>러닝</h4>
-              <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+              <h4>Running!</h4>
+              <p>モバイルゲームの基本になるONETOUCHゲーム作り練習です</p>
             </div>
           </div>
         </div>
@@ -170,8 +164,8 @@
                 <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
               </a>
               <div class="portfolio-caption">
-                <h4>미완성프로젝트</h4>
-                <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                <h4>未完了プロジェクト(進行中)</h4>
+                <p>モバイルゲームの最も基本的なジャンルである収集型モバイルゲームを模作しています。</p>
               </div>
             </div>
         </div>
