--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="hover01" href="#">
-              <figure><img class="img-fluid" src="img/portfolio1.jpg" alt=""></figure>
+            <a class="hover01" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s">
+              <figure><img class="img-fluid" src="img/Stack.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>Stack</h4>
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="hover01" href="#">
+            <a class="hover01" href="https://www.youtube.com/watch?v=i-7EPSdPUm4">
               <figure><img class="img-fluid" src="img/portfolio2.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="hover01" href="#">
+            <a class="hover01" href="https://www.youtube.com/watch?v=2C4fG40euP4&t=3s">
               <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="hover01" href="#">
+          <a class="hover01 no_rink">
             <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
           </a>
           <div class="portfolio-caption">
