--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="hover01" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s">
-              <figure><img class="img-fluid" src="img/Stack.jpg" alt=""></figure>
+              <figure><img class="img-fluid" src="img/Stack.PNG" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>Stack</h4>
@@ -140,7 +140,7 @@
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="hover01" href="https://www.youtube.com/watch?v=i-7EPSdPUm4">
-              <figure><img class="img-fluid" src="img/portfolio2.jpg" alt=""></figure>
+              <figure><img class="img-fluid" src="img/TopDown.jpg" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>Top＆Down</h4>
@@ -149,7 +149,7 @@
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="hover01" href="https://www.youtube.com/watch?v=2C4fG40euP4&t=3s">
-              <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
+              <figure><img class="img-fluid" src="img/Running.JPG" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>Running!</h4>
@@ -159,7 +159,7 @@
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="hover01 no_rink">
-            <figure><img class="img-fluid" src="img/portfolio3.jpg" alt=""></figure>
+            <figure><img class="img-fluid" src="img/RPG.jpg" alt=""></figure>
           </a>
           <div class="portfolio-caption">
             <h4>未完了プロジェクト(進行中)</h4>
@@ -179,7 +179,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12 about-img">
-            <img src="img/about.jpg" alt="">
+            <img src="img/my.jpg" alt="">
             <div class="shape shape-about"></div>
             <div class="shape shape-l"></div>
             <div class="shape shape-l shape-l-hor"></div>
