--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="hover01" href="https://www.youtube.com/watch?v=i-7EPSdPUm4">
-              <figure><img class="img-fluid" src="img/TopDown.jpg" alt=""></figure>
+              <figure><img class="img-fluid" src="img/TopDown.JPG" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>Top＆Down</h4>
@@ -159,7 +159,7 @@
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="hover01 no_rink">
-            <figure><img class="img-fluid" src="img/RPG.jpg" alt=""></figure>
+            <figure><img class="img-fluid" src="img/RPG.JPG" alt=""></figure>
           </a>
           <div class="portfolio-caption">
             <h4>未完了プロジェクト(進行中)</h4>
