--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
           <div class="col-lg-4 col-sm-4 col-xs-12">
             <div class="service-img">
-              <img src="img/service.jpg" alt="">
+              <img src="img/my.jpg" alt="">
               <div class="shape"></div>
             </div>
           </div>
