--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
       <div class="container">
         <div class="row">
           <div class="title">
-            <h6>portfolio</h6>
-            <p>If you do it right, it will last forever</p>
+            <h6>ポートフォリオ</h6>
+            <p>今までの結果ものです<br></p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="hover01" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s">
+            <a class="hover01" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s" target="_blank">
               <figure><img class="img-fluid" src="img/Stack.PNG" alt=""></figure>
             </a>
             <div class="portfolio-caption">
@@ -139,16 +139,17 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="hover01" href="https://www.youtube.com/watch?v=i-7EPSdPUm4">
+            <a class="hover01" href="https://www.youtube.com/watch?v=i-7EPSdPUm4" target="_blank">
               <figure><img class="img-fluid" src="img/TopDown.JPG" alt=""></figure>
             </a>
             <div class="portfolio-caption">
               <h4>Top＆Down</h4>
               <p>Rayの概念を理解するための練習プロジェクトです</p>
+              <p href="https://www.youtube.com/watch?v=i-7EPSdPUm4" >test</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="hover01" href="https://www.youtube.com/watch?v=2C4fG40euP4&t=3s">
+            <a class="hover01" href="https://www.youtube.com/watch?v=2C4fG40euP4&t=3s" target="_blank">
               <figure><img class="img-fluid" src="img/Running.JPG" alt=""></figure>
             </a>
             <div class="portfolio-caption">
