--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="row">
           <div class="title">
             <h6>ポートフォリオ</h6>
-            <p>今までの結果ものです<br></p>
+            <p>今までの結果ものです<br>(イメージをクリックするとプレ-映像を見ることが出来ます。)</p>
           </div>
         </div>
         <div class="row">
