--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="portfolio-caption">
               <h4>Stack</h4>
               <p>モバイルゲームのStackの模索です(個人プロジェクト課題)</p>
-              <a class="hover01" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s" target="_blank">
+              <a class="rink" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s" target="_blank">
                 test
               </a>
             </div>
