--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             <div class="portfolio-caption">
               <h4>Stack</h4>
               <p>モバイルゲームのStackの模索です(個人プロジェクト課題)</p>
-              <a class="rink" href="https://www.youtube.com/watch?v=_jjO712hBA4&t=11s" target="_blank">
-                test
+              <a class="rink" href="https://github.com/JunGyeomKim/Stack" target="_blank">
+                https://github.com/JunGyeomKim/Stack
               </a>
             </div>
           </div>
