--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="portfolio-caption">
               <h4>Stack</h4>
               <p>モバイルゲームのStackの模索です(個人プロジェクト課題)</p>
-              <a class="rink" href="https://github.com/JunGyeomKim/Stack" target="_blank">
+              <a id="rink" href="https://github.com/JunGyeomKim/Stack" target="_blank">
                 https://github.com/JunGyeomKim/Stack
               </a>
             </div>
