--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             <div class="portfolio-caption">
               <h4>Top＆Down</h4>
               <p>Rayの概念を理解するための練習プロジェクトです</p>
+              <a id="rink" href="https://github.com/JunGyeomKim/TopDown" target="_blank">
+                https://github.com/JunGyeomKim/TopDown
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -157,6 +160,9 @@
             <div class="portfolio-caption">
               <h4>Running!</h4>
               <p>モバイルゲームの基本になるONETOUCHゲーム作り練習です</p>
+              <a id="rink" href="https://github.com/JunGyeomKim/RunningGame" target="_blank">
+                https://github.com/JunGyeomKim/RunningGame
+              </a>
             </div>
           </div>
         </div>
@@ -166,7 +172,10 @@
           </a>
           <div class="portfolio-caption">
             <h4>未完了プロジェクト(進行中)</h4>
-            <p>モバイルゲームの最も基本的なジャンルである収集型モバイルゲームを模作しています。</p>
+            <p>モバイルゲームの最も基本的なジャンルである収集型モバイルゲームを制作しています。</p>
+            <a id="rink" href="https://github.com/JunGyeomKim/RPG" target="_blank">
+              https://github.com/JunGyeomKim/RPG
+            </a>
           </div>
         </div>
     </div>
