--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12 about-img">
-            <img src="img/my.jpg" alt="">
+            <img src="img/temp.jpg" alt="">
             <div class="shape shape-about"></div>
             <div class="shape shape-l"></div>
             <div class="shape shape-l shape-l-hor"></div>
