--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  	<title>My Name is Kim</title>
+  	<title>キムのホームページ</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon"/>
@@ -21,15 +21,15 @@
           <img src="img/x.svg" alt="Menu">
         </div>
         <ul>
-          <h3>Menu</h3>
+          <h3>メニュー</h3>
           <li><a href="#one">メイン</a></li>
           <li><a href="#two">履歴</a></li>
           <li><a href="#three">ポートフォリオ</a></li>
-          <li><a href="#four">About</a></li>
+          <li><a href="#four">プログラマ</a></li>
         </ul>
         <ul class="lower-menu">
-          <h3>Get in Touch</h3>
-          <li><a href="#five">Contact Me</a></li>
+          <h3>連絡を取る</h3>
+          <li><a href="#five">連絡先</a></li>
         </ul>
         <h5>© Kim 2020</h5>
       </nav>
@@ -185,8 +185,8 @@
       <div class="container">
         <div class="row">
           <div class="title">
-            <h6>about</h6>
-            <p>Less is more work</p>
+            <h6>プログラマ</h6>
+            <p>いつも創意的に考えろ</p>
           </div>
         </div>
         <div class="row">
