--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="shape shape-l shape-l-hor"></div>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 about-text">
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore<br>magna aliqua. Ut enim ad minim veniam, quis nostrud <br>exercitation ullamco laboris nisi ut aliqui</h4>
+            <h4>自分だけのビジョンを持って <br>多数の言語を学習し、<br>最適化とデバッグスキルを <br>極限に引き上げる。</h4>
           <div class="separator"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>exercitation ullamco laboris nisi ut aliqu</p>
           </div>
