--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
       <div class="container">
         <div class="row">
           <div class="title">
-            <h6>contact</h6>
-            <p>I was born to create</p>
+            <h6>連絡を取る</h6>
+            <p>私はを創造するために生まれた</p>
           </div>
         </div>
         <div class="row">
