--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-magic" aria-hidden="true"></i>
-            <h4>もっと華やかに</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor <br>incididunt ut lab</p>
+            <h4>もっと楽しく</h4>
+            <p>ゲームは楽しくなければならない <br>いつも楽しさを考え、<br>私が楽しくなければ私のゲームをする人も楽しくない</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
@@ -199,7 +199,11 @@
           <div class="col-md-6 col-sm-6 col-xs-12 about-text">
             <h4>自分だけのビジョンを持って <br>多数の言語を学習し、<br>最適化とデバッグスキルを <br>極限に引き上げる。</h4>
           <div class="separator"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>exercitation ullamco laboris nisi ut aliqu</p>
+          <p>商業的に大成功できるゲームを常に考え、C系列の言語を誰よりも上手くできるように努力する。
+            <br>プログラマは常に最適化を考えなければならないと思う
+            <br>良いゲーム性を持ったゲームであっても最適化に失敗すれば、それは良いゲームとは言えない。
+            <br>いつも良いゲームが何かを考える ゲームプログラマーを追求しよう。
+          </p>
           </div>
         </div>
       </div>
