--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
           <div class="square">
             <i class="fa fa-magic" aria-hidden="true"></i>
             <h4>もっと楽しく</h4>
-            <p>ゲームは楽しくなければならない <br>いつも楽しさを考え、<br>私が楽しくなければ私のゲームをする人も楽しくない</p>
+            <p>ゲームは楽しくなければならない <br>いつも楽しさを考え、<br>私が楽しくなければ私のゲームをする人も楽しくない。</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-diamond" aria-hidden="true"></i>
             <h4>もっと面白く</h4>
-            <p>ゲームは面白いものだ <br>いつもプレーヤーの立場で考え、<br>面白さを追求する</p>
+            <p>ゲームは面白いものだ <br>いつもプレーヤーの立場で考え、<br>面白さを追求する。</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <div class="square">
             <i class="fa fa-globe" aria-hidden="true"></i>
             <h4>もっと速く</h4>
-            <p>いくら面白くても遅いなら失敗だ<br>いつも最適化を考え、<br>安定性を追求する</p>
+            <p>いくら面白くても遅いなら失敗だ<br>いつも最適化を考え、<br>安定性を追求する。</p>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
             <div class="service-text">
               <i class="fa fa-sliders" aria-hidden="true"></i>
               <h4>6か月間のユニティゲーム<br>専門家課程修了</h4>
-              <p>現在最も人気のあるゲーム制作ツールであるUnityの活用方法を専門家過程で習得</p>
+              <p>現在最も人気のあるゲーム制作ツールであるUnityの活用方法を専門家過程で習得。</p>
             </div>
             <div class="service-text">
               <i class="fa fa-laptop" aria-hidden="true"></i>
@@ -125,7 +125,7 @@
         <div class="row">
           <div class="title">
             <h6>ポートフォリオ</h6>
-            <p>今までの結果ものです<br>(イメージをクリックするとプレ-映像を見ることが出来ます。)</p>
+            <p>今までの結果ものです<br>(イメージをクリックするとプレ-映像を見ることが出来ます)</p>
           </div>
         </div>
         <div class="row">
@@ -135,7 +135,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Stack</h4>
-              <p>モバイルゲームのStackの模索です(個人プロジェクト課題)</p>
+              <p>モバイルゲームのStackの模索です。(個人プロジェクト課題)</p>
               <a id="rink" href="https://github.com/JunGyeomKim/Stack" target="_blank">
                 https://github.com/JunGyeomKim/Stack
               </a>
@@ -147,7 +147,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Top＆Down</h4>
-              <p>Rayの概念を理解するための練習プロジェクトです</p>
+              <p>Rayの概念を理解するための練習プロジェクトです。</p>
               <a id="rink" href="https://github.com/JunGyeomKim/TopDown" target="_blank">
                 https://github.com/JunGyeomKim/TopDown
               </a>
@@ -159,7 +159,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Running!</h4>
-              <p>モバイルゲームの基本になるONETOUCHゲーム作り練習です</p>
+              <p>モバイルゲームの基本になるONETOUCHゲーム作り練習です。</p>
               <a id="rink" href="https://github.com/JunGyeomKim/RunningGame" target="_blank">
                 https://github.com/JunGyeomKim/RunningGame
               </a>
@@ -214,7 +214,7 @@
         <div class="row">
           <div class="title">
             <h6>連絡を取る</h6>
-            <p>私はを創造するために生まれた</p>
+            <p>私はを創造するために生まれた。</p>
           </div>
         </div>
         <div class="row">
