--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
         <div class="row">
           <div class="contact-info">
-            <h1>ご覧くださって本当にありがとうございます。</h1>
+            <h1>お気軽に下記までお便りください。</h1>
             <h1>wnsruadl90@naver.com</h1>
             <!-- <p>Find us on social networks:</p>
             <ul>
