--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h4>自分だけのビジョンを持って <br>多数の言語を学習し、<br>最適化とデバッグスキルを <br>極限に引き上げる。</h4>
           <div class="separator"></div>
           <p>商業的に大成功できるゲームを常に考え、C系列の言語を誰よりも上手くできるように努力する。
-            <br>プログラマは常に最適化を考えなければならないと思う
+            <br>プログラマは常に最適化を考えなければならないと思う。
             <br>良いゲーム性を持ったゲームであっても最適化に失敗すれば、それは良いゲームとは言えない。
             <br>いつも良いゲームが何かを考える ゲームプログラマーを追求しよう。
           </p>
