--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <div class="container">
         <div class="row">
           <div class="title">
-            <h6>履歴基本に充実せよ</h6>
-            <p>履歴</p>
+            <h6>基本に充実せよ</h6>
+            <p>紹介</p>
           </div>
         </div>
         <div class="row">
